<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!-- <TextView
            android:id="@+id/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="70dip"
            android:layout_marginTop="20dip"
            android:text="@string/imagetest"
            android:textColor="@android:color/black"
            android:textSize="40dip" /> -->
        <ImageView
                android:id="@+id/title4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dip"
                android:src="@drawable/title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/title4"
            android:layout_marginLeft="60dip"
            android:layout_marginTop="40dip"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/shibie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="0dip"
                android:src="@drawable/miao"
                android:background="@color/light_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/control"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title4"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="40dip"
            android:layout_toRightOf="@+id/one"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="0dip"
                android:src="@drawable/yu"
                android:background="@color/light_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/help"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/one"
            android:layout_marginLeft="60dip"
            android:layout_marginTop="40dip"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="0dip"
                android:src="@drawable/jing"
                android:background="@color/light_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/update"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/two"
            android:layout_marginLeft="60dip"
            android:layout_marginTop="40dip"
            android:layout_toRightOf="@+id/three"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="0dip"
                android:src="@drawable/yuan"
                android:background="@color/light_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tick"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>